	    	 older than 1.0.15; related to deprecated ALSA API
		 function snd_pcm_sw_params_set_xfer_align()
        - fixed: bug in removing audio objects when disk double
	  	 buffering is used (-z:db); could cause a segfault
		 in some scenarios (e.g. with ecasignalview)
        - fixed: interactive mode; c-selected segfauls if issued
	    	 with no chainsetup selected
17102009 (v2.7.0) -** stable release **-
	- note: key changes are described in more detail at:
                http://eca.cx/relnotes/ecasound_v2_7_0_relnotes.txt
	- added: new exit code of '4' to ecasound; see entry below
		 about signal handling changes and ecasound(1) for
		 more details
	- added: -eadb chainop, like -ea/-eac, but gain given in dB;
		 documented in ecasound(1)
	- added: -chorder chainop; see ecasound(1)
	- added: optional inner loop optimizations using liboil;
		 enable with '--enable-liboil'
        - added: OSC support added, see ecasound(1) and 
	         Documentation/ecasound_osc_interface.txt; sffeat:2541462
	- added: in ncurses mode, honor COLUMNS environment variable
	- added: configure - added '--with-extra-cppflags' and 
	         '--with-extra-libs' options
        - added: new 'cop-get' command; see ecasound-iam(1) [alinson]
	- changed: ecasound now defines "-D_XOPEN_SOURCE=500" for 
	           all builds, expressing that the codebase expects 
		   the build environment be compatible with the Single 
		   UNIX Spec v2 (1998); thanks to Jussi Laako for
		   reminding about this
	- changed: yet another change to signal handling in ecasound;
		   now two level response to signals is supported in
		   all stages of process termination -> first starting
		   normal cleanup and exit procudere, and with
		   second signal terminate immediately; see ecasound(1)
		   for the full story (new 'SIGNALS' section)
	- changed: dropped "-funroll-loops" from the set of default
		   compiler options
	- changed: comment out many entries in the global installed